fix: Fix note text not centered

--- a/App.css
+++ b/App.css
@@ -44,9 +44,9 @@
   border-radius: 0.5rem;
   margin: 0.1rem;
   font-size: 1.5rem;
-  padding: 1rem 2rem;
   transition: all 0.5s ease;
-  width: 3rem;
+  width: 4.5rem;
+  height: 4.5rem;
   text-align: center;
   color: white;
   background: rgba(0, 0, 0, 0.4);
